Run smb_client::MDnsHostLocator core on the IO thread.

MDnsHostLocator uses net:: code, which must be run on the IO thread.
This change splits the core logic into an MDnsHostLocator::Impl class
that runs on the IO thread.

BUG=906182

Change-Id: Ie084cea490b91232ec45c8acc3b24097bf737877
Reviewed-on: https://chromium-review.googlesource.com/c/1460212
Reviewed-by: Bailey Berro <baileyberro@chromium.org>
Commit-Queue: Anand Mistry <amistry@chromium.org>
Cr-Commit-Position: refs/heads/master@{#630666}
Former-commit-id: 70b7e0a211f3de266f0759f880246a6cc525288f